@@ -14,6 +14,9 @@
 # Modified 16 May 2011 by Michaell Friendly
 #   - corrected bug introduced in dataEllipse via allowing pivot=TRUE 
 # Modified 7 Aug 2011 by J. Fox: added draw argument
+# Modified 28 Nov 2011  by J. Fox (suggsted by Michael Friendly):
+#   - corrected bug in xlab, ylab in confidenceEllipse()
+#   - added dfn argument to .lm and .glm methods for confidenceEllipse()
 
 ellipse <- function(center, shape, radius, log="", center.pch=19, center.cex=1.5, segments=51, draw=TRUE, add=draw, 
 		xlab="", ylab="", col=palette()[2], lwd=2, fill=FALSE, fill.alpha=0.3,
@@ -120,7 +123,7 @@ confidenceEllipse <- function (model, ...) {
 	UseMethod("confidenceEllipse")
 }
 
-confidenceEllipse.lm <- function(model, which.coef, levels=0.95, Scheffe=FALSE, 
+confidenceEllipse.lm <- function(model, which.coef, levels=0.95, Scheffe=FALSE, dfn,
 		center.pch=19, center.cex=1.5, segments=51, xlab, ylab, 
 		col=palette()[2], lwd=2, fill=FALSE, fill.alpha=0.3, draw=TRUE, add=!draw, ...){
 	which.coef <- if(length(coefficients(model)) == 2) c(1, 2)
@@ -130,9 +133,9 @@ confidenceEllipse.lm <- function(model, which.coef, levels=0.95, Scheffe=FALSE,
 				} else which.coef
 			}
 	coef <- coefficients(model)[which.coef]
-	xlab <- if (missing(xlab)) paste(names(coef)[1], "coefficient")
-	ylab <- if (missing(ylab)) paste(names(coef)[2], "coefficient")
-	dfn <- if (Scheffe) sum(df.terms(model)) else 2
+	if (missing(xlab)) xlab <- paste(names(coef)[1], "coefficient")
+	if (missing(ylab)) ylab <-  paste(names(coef)[2], "coefficient")
+	if (missing(dfn)) dfn <- if (Scheffe) sum(df.terms(model)) else 2
 	dfd <- df.residual(model)
 	shape <- vcov(model)[which.coef, which.coef]
 	levels <- rev(sort(levels))
@@ -150,7 +153,7 @@ confidenceEllipse.lm <- function(model, which.coef, levels=0.95, Scheffe=FALSE,
 }
 
 
-confidenceEllipse.glm <- function(model, which.coef, levels=0.95, Scheffe=FALSE, 
+confidenceEllipse.glm <- function(model, which.coef, levels=0.95, Scheffe=FALSE, dfn,
 		center.pch=19, center.cex=1.5, segments=51, xlab, ylab,
 		col=palette()[2], lwd=2, fill=FALSE, fill.alpha=0.3, draw=TRUE, add=!draw, ...){
 	which.coef <- if(length(coefficients(model)) == 2) c(1, 2)
@@ -162,7 +165,8 @@ confidenceEllipse.glm <- function(model, which.coef, levels=0.95, Scheffe=FALSE,
 	coef <- coefficients(model)[which.coef]
 	xlab <- if (missing(xlab)) paste(names(coef)[1], "coefficient")
 	ylab <- if (missing(ylab)) paste(names(coef)[2], "coefficient")
-	df <- if (Scheffe) sum(df.terms(model)) else 2
+	df <- if (!missing(dfn)) dfn
+			else if (Scheffe) sum(df.terms(model)) else 2
 	sumry <- summary(model, corr = FALSE)
 	shape <- vcov(model)[which.coef, which.coef]
 	levels <- rev(sort(levels))
